--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,11 @@
         "PYTHONPATH": "${workspaceFolder};${env:PYTHONPATH}"
     },
     "editor.defaultFormatter": "ms-python.black-formatter",
-    "editor.formatOnSave": true
+    "editor.formatOnPaste": true,
+    "editor.formatOnSave": true,
+    "editor.formatOnSaveMode": "file",
+    "black-formatter.args": [
+        "-l120"
+    ],
+    "files.autoSave": "onFocusChange"
 }
