--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,7 +5,7 @@ on:
       branches: [ "main" ]
 
 jobs:
-  upload-release-asset:
+  build-and-release:
     name: Release
     runs-on: ubuntu-latest
     strategy:
@@ -30,10 +30,34 @@ jobs:
       - name: Build wheel
         run: poetry build -f wheel
 
-      - name: Create Release with GitHub CLI
-        shell: bash
+      - name: Save build artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: dist-${{ matrix.python-version }}
+          path: dist/
+
+  create-release:
+    runs-on: ubuntu-latest
+    needs: build-and-release
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Download artifacts
+        uses: actions/download-artifact@v4
+        with:
+          path: dist-all
+
+      - name: Read version from pyproject.toml
+        id: get_version
         run: |
-          FILES_WHEEL=$(ls ./dist/*.whl)
-          gh release create ${{ github.ref_name }} $FILES_WHEEL --generate-notes
+          VERSION=$(grep '^version =' pyproject.toml | cut -d '"' -f2)
+          echo "VERSION=$VERSION" >> $GITHUB_OUTPUT
+
+      - name: Create GitHub Release
+        uses: softprops/action-gh-release@v2
+        with:
+          tag_name: v${{ steps.get_version.outputs.VERSION }}
+          name: Release v${{ steps.get_version.outputs.VERSION }}
+          files: dist-all/**/*
         env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
