--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,10 +9,10 @@ readme = "README.md"
 requires-python = ">=3.11,<3.13"
 dependencies = [
     "sewar>=0.4.6,<0.5.0",
-    "opencv-python==4.9.0.80",
-    "opencv-contrib-python==4.9.0.80",
     "numpy==1.26.1",
-    "typer>=0.15.1,<0.16.0"
+    "typer>=0.15.1,<0.16.0",
+    "device-manager @ https://github.com/Curso-de-Robotica-e-IA/device_manager/releases/download/v1.3.4/device_manager-1.3.4-py3-none-any.whl",
+    "isort (>=6.0.1,<7.0.0)"
 ]
 
 [project.scripts]
@@ -21,6 +21,7 @@ camapper = "camera_mapper.cli:app"
 [tool.poetry.group.dev.dependencies]
 ipython = "^9.2.0"
 ruff = "^0.11.10"
+ipdb = "^0.13.13"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
