--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,8 @@ dependencies = [
     "numpy==1.26.1",
     "typer>=0.15.1,<0.16.0",
     "device-manager @ https://github.com/Curso-de-Robotica-e-IA/device_manager/releases/download/v1.3.4/device_manager-1.3.4-py3-none-any.whl",
-    "isort (>=6.0.1,<7.0.0)"
+    "isort (>=6.0.1,<7.0.0)",
+    "transitions (>=0.9.2,<0.10.0)"
 ]
 
 [project.scripts]
