--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,8 @@ dependencies = [
     "typer>=0.15.1,<0.16.0",
     "device-manager @ https://github.com/Curso-de-Robotica-e-IA/device_manager/releases/download/v1.4.1/device_manager-1.4.1-py3-none-any.whl",
     "isort (>=6.0.1,<7.0.0)",
-    "transitions (>=0.9.2,<0.10.0)"
+    "transitions (>=0.9.2,<0.10.0)",
+    "easyocr (>=1.7.2,<2.0.0)"
 ]
 
 [project.scripts]
