--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,8 @@ dependencies = [
     "device-manager @ https://github.com/Curso-de-Robotica-e-IA/device_manager/releases/download/v1.4.1/device_manager-1.4.1-py3-none-any.whl",
     "isort (>=6.0.1,<7.0.0)",
     "transitions (>=0.9.2,<0.10.0)",
-    "easyocr (>=1.7.2,<2.0.0)"
+    "easyocr (>=1.7.2,<2.0.0)",
+    "matplotlib (>=3.10.3,<4.0.0)"
 ]
 
 [project.scripts]
@@ -24,6 +25,7 @@ camapper = "camera_mapper.cli:app"
 ipython = "^9.2.0"
 ruff = "^0.11.10"
 ipdb = "^0.13.13"
+opencv-contrib-python = "^4.11.0.86"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
