--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ ipython = "^9.2.0"
 ruff = "^0.11.10"
 ipdb = "^0.13.13"
 opencv-contrib-python = "^4.11.0.86"
+ipykernel = "^6.29.5"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
