FEAT: Update blur button logic and add new button patterns for enhanced functionality

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,5 +13,8 @@
     "files.autoSave": "onFocusChange",
     "[python]": {
         "editor.defaultFormatter": "charliermarsh.ruff"
+    },
+    "[json]": {
+        "editor.defaultFormatter": "vscode.json-language-features"
     }
 }
